--- a/Travel.csproj
+++ b/Travel.csproj
@@ -159,6 +159,7 @@
     <Compile Include="UserControls\MainUC.Designer.cs">
       <DependentUpon>MainUC.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Second.resx">
       <DependentUpon>Second.cs</DependentUpon>
     </EmbeddedResource>
